# xor-encryption

./: .gitignore  CMakeLists.txt  README.md  base64_utils.c  base64_utils.h  conversion_utils.c  conversion_utils.h  debug.h  display_utils.c  display_utils.h  file_io.c  file_io.h  hash_map.c  hash_map.h  main.c  option.c  option.h  random_utils.c  random_utils.h  simple_linked_list.c  simple_linked_list.h  terminal_color.c  terminal_color.h  test.c  test.h  utils.h  xor_cipher.c  xor_cipher.h  xor_cypher.h
debug_exemple/fr_FR/: vscode_launch.json  vscode_tasks.json
